# nota

./: .gitignore  CHANGELOG.md  LICENSE  index.html  knip.config.json  package.json  readme.md  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
data/: sample-notes.json
docs/: mobile-setup.md
public/: bilstm-vocab.json  radiology-vocab.json
scripts/: generate-icons.mjs  process-bilstm-outputs.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: features.test.ts  formatter.test.ts  store.test.ts
src/components/: AnnotationList.tsx  ConfirmModal.tsx  DocumentView.tsx  ErrorBoundary.tsx  FormatView.tsx  Header.tsx  ImportModeModal.tsx  NotesList.tsx  QuestionPicker.tsx  ReviewView.tsx  SettingsModal.tsx  SmartFilter.tsx  UpdateChecker.tsx
src/hooks/: useKeyboard.ts  useStore.ts
src/lib/: bilstm-formatter.ts  bilstm-inference.ts  exporters.ts  formatter.ts  formatterModes.ts  importers.ts  platform.ts  questions.ts  radiology-inference.ts  sections.ts  storage.ts  types.ts
